feat: draft update store
ref: #54

--- a/.plop/storeHook/hookName.hook.ts.hbs
+++ b/.plop/storeHook/hookName.hook.ts.hbs
@@ -1,3 +1,5 @@
+import React from 'react';
+
 import { I{{ properCase name }} } from './{{ camelCase name }}.types';
 import {{ properCase name }}Store from './{{ camelCase name }}Store';
 
@@ -6,9 +8,9 @@ const {{ fullName prefix name }} = (): I{{ properCase name }} => {
 
   return {
     counter,
-    action: () => {{ properCase name }}Store.action(),
-    useSubscribe: {{ properCase name }}Store.useSubscribe,
-    reset: () => {{ properCase name }}Store.reset(),
+    action: React.useCallback<I{{ properCase name }}['action']>({{ properCase name }}Store.action, []),
+    useSubscribe: React.useCallback<I{{ properCase name }}['useSubscribe']>({{ properCase name }}Store.useSubscribe, []),
+    reset: React.useCallback<I{{ properCase name }}['reset']>({{ properCase name }}Store.reset, []),
   };
 };
 
